--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "uniqolor": "^1.1.1",
     "vue": "^3.4.29",
     "vue-material-design-icons": "^5.3.0",
     "vue-router": "^4.3.3"
